[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "GPL-3.0"
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.1", features = ["api-all"] }
crc = "1.8.1"
probe-rs = { git = "https://github.com/probe-rs/probe-rs.git", branch = "master" }


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
